--- a/aboutus.html
+++ b/aboutus.html
@@ -46,12 +46,14 @@
       <div class="containerWrp">
         <div class="navbar">
           <div class="logo">
-            <img
-              src="images/logo - Nusanse.svg"
-              alt=""
-              height="32px"
-              width="155px"
-            />
+            <a href="index.html">
+              <img
+                src="images/logo - Nusanse.svg"
+                alt=""
+                height="32px"
+                width="155px"
+              />
+            </a>
           </div>
 
           <div class="hamburger-menu">
@@ -108,6 +110,8 @@
                       <p class="small-p">Software Integration</p>
                       <br />
                       <p class="small-p">Sales Funnel and Pipelines</p>
+                      <br>
+                      <a href="services.html"><p>Web Development</p></a>
                     </li>
                   </ul>
                 </div>
@@ -162,9 +166,9 @@
               Automation Agency.
             </h5>
           </div>
-          <div>
+          <!-- <div>
             <img src="images/ab-2.png" alt="" />
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
@@ -188,12 +192,12 @@
         <div>
           <div class="block" style="gap: 60px">
             <div class="num">
-              <h1>250+</h1>
+              <h1>50+</h1>
               <h5>Businesses Thrive</h5>
             </div>
             <div class="rght">
               <p>
-                We helped more than 250 business to reach to their business
+                We helped more than 50 business to reach to their business
                 goals with our innovative solutions.
               </p>
             </div>
@@ -216,13 +220,13 @@
 
           <div class="block" style="gap: 36px">
             <div class="num">
-              <h1>$1B+</h1>
-              <h5>Accumulated over $1B</h5>
+              <h1>$5M+</h1>
+              <h5>Accumulated over $5M</h5>
             </div>
             <div class="rght">
               <p>
                 Over the time, working from Large to small business we have
-                accumulated over $1B.
+                accumulated over $5M.
               </p>
             </div>
           </div>
@@ -233,7 +237,7 @@
 
     <!-- dark section  -->
 
-    <div class="dark">
+    <!-- <div class="dark">
       <div class="containerWrp">
         <div class="text"><p>Our Team</p></div>
         <h3>Let’s meet our <span>Core members</span></h3>
@@ -260,7 +264,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- value section  -->
     <div class="containerWrp">
@@ -295,33 +299,30 @@
             </h5>
           </div>
           <div class="tab" id="tab2">
-            <h3 class="orange-1">Transparent 22</h3>
-            <img src="images/ab-4.png" alt="" />
-            <h3 class="orange-2">Communication</h3>
+            <h3 class="orange-1">Precision</h3>
+            <img src="images/ab-5.png" alt="" />
+            <h3 class="orange-2">Management</h3>
             <h5>
-              We prioritize open dialogue, ensuring clients are informed at
-              every turn. Our clear communication fosters trust and alignment,
-              enriching collaboration.
+              Our meticulous planning and execution ensure project success. Deadlines are met, 
+              objectives achieved, and complexities managed seamlessly, guaranteeing client satisfaction.
             </h5>
           </div>
           <div class="tab" id="tab3">
-            <h3 class="orange-1">Transparent 33</h3>
-            <img src="images/ab-4.png" alt="" />
-            <h3 class="orange-2">Communication</h3>
+            <h3 class="orange-1">Meticulous</h3>
+            <img src="images/ab-6.png" alt="" />
+            <h3 class="orange-2">Detail</h3>
             <h5>
-              We prioritize open dialogue, ensuring clients are informed at
-              every turn. Our clear communication fosters trust and alignment,
-              enriching collaboration.
+              We obsess over details, perfecting design elements to deliver exceptional outcomes. From 
+              aesthetics to functionality, our dedication shines through in every pixel.
             </h5>
           </div>
           <div class="tab" id="tab4">
-            <h3 class="orange-1">Transparent 44</h3>
-            <img src="images/ab-4.png" alt="" />
-            <h3 class="orange-2">Communication</h3>
+            <h3 class="orange-1">Innovative</h3>
+            <img src="images/ab-7.png" alt="" />
+            <h3 class="orange-2">Excellence</h3>
             <h5>
-              We prioritize open dialogue, ensuring clients are informed at
-              every turn. Our clear communication fosters trust and alignment,
-              enriching collaboration.
+              We thrive on innovation, pushing creative boundaries. By blending cutting-edge trends 
+              and strategic insights, we consistently deliver designs that stand at the forefront of excellence.
             </h5>
           </div>
         </div>
@@ -414,15 +415,19 @@
               </div>
               <p>From brand creation to revenue generation.</p>
               <div class="social">
-                <div><i class="fa-brands fa-instagram"></i></div>
+                <a href="https://www.instagram.com/_nusanse?igsh=cms1a2xqODdiM2Zm">
+                  <div><i class="fa-brands fa-instagram"></i></div>
+                </a>
                 <div><i class="fa-brands fa-twitter"></i></div>
-                <div><i class="fa-brands fa-linkedin-in"></i></div>
+                <a href="https://www.linkedin.com/company/nusanseio">
+                  <div><i class="fa-brands fa-linkedin-in"></i></div>
+                </a>
               </div>
             </div>
 
             <div id="m">
               <h4 id="foot-h">Why Us?</h4>
-              <p id="foot-p">Why Our Company</p>
+              <!-- <p id="foot-p">Why Our Company</p> -->
               <a href="obm.html">
                 <p id="foot-p">Our Company vs <br />Online Business Manager</p>
               </a>
@@ -446,7 +451,7 @@
       </div>
 
       <div class="copyright">
-        <p>2024 © My Company. All Rights Reserved.</p>
+        <p>2024 © Nusanse. All Rights Reserved.</p>
       </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
