--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
     <!-- stylesheet  -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="navbar.css">
   </head>
   <body>
@@ -50,12 +50,14 @@
       <div class="containerWrp">
         <div class="navbar">
           <div class="logo">
-            <img
-              src="images/logo - Nusanse.svg"
-              alt=""
-              height="32px"
-              width="155px"
-            />
+            <a href="index.html">
+              <img
+                src="images/logo - Nusanse.svg"
+                alt=""
+                height="32px"
+                width="155px"
+              />
+            </a>
           </div>
 
           <div class="hamburger-menu">
@@ -63,11 +65,7 @@
           </div>
 
           <div class="nav">
-            <a
-              href="index.html"
-              class="active"
-              >Home
-            </a>
+            <a href="index.html" class="active">Home</a>
             <div class="about-nav hasSubMenu">
               <a href="#">About us &nbsp;<i class="fa-solid fa-chevron-down"></i></a>
               <ul class="sub-menu">
@@ -108,6 +106,8 @@
                       <p class="small-p">Software Integration</p>
                       <br />
                       <p class="small-p">Sales Funnel and Pipelines</p>
+                      <br>
+                      <a href="services.html"><p>Web Development</p></a>
                     </li>
                   </ul>
                 </div>
@@ -340,12 +340,12 @@
               insights and free up your team's time to focus on what truly
               matters: building strong relationships and closing deals.
             </h5>
-            <a href="#">
+            <!-- <a href="#">
               <div class="learn-more">
                 Learn More <br />
                 <i class="fa-solid fa-arrow-right"></i>
               </div>
-            </a>
+            </a> -->
           </div>
           <div class="image" data-aos="fade-left">
             <img src="images/crm1.png" alt="" />
@@ -362,11 +362,11 @@
               insights and free up your team's time to focus on what truly
               matters: building strong relationships and closing deals.
             </h5>
-            <a href="#"
+            <!-- <a href="#"
               ><div class="learn-more">
                 Learn More <br />
                 <i class="fa-solid fa-arrow-right"></i></div
-            ></a>
+            ></a> -->
           </div>
           <div class="image-m" data-aos="fade-up">
             <img src="images/crm1.png" alt="" />
@@ -381,11 +381,11 @@
             <h5>
               We are passionate marketing professionals with years of experience in the field. We leverage our expertise to craft strategic marketing campaigns that target the right audience, generate leads, and achieve your business goals. Whether it's crafting compelling content, optimizing your online presence, or implementing data-driven strategies, we are dedicated to helping your brand thrive in today's competitive landscape.
             </h5>
-            <a href="#"
+            <!-- <a href="#"
               ><div class="learn-more">
                 Learn More <br />
                 <i class="fa-solid fa-arrow-right"></i></div
-            ></a>
+            ></a> -->
           </div>
 
           <div class="desc-m" data-aos="fade-up">
@@ -393,10 +393,10 @@
             <h5>
               We are passionate marketing professionals with years of experience in the field. We leverage our expertise to craft strategic marketing campaigns that target the right audience, generate leads, and achieve your business goals. Whether it's crafting compelling content, optimizing your online presence, or implementing data-driven strategies, we are dedicated to helping your brand thrive in today's competitive landscape.
             </h5>
-            <a href="#"
+            <!-- <a href="#"
               ><div class="learn-more">
                 Learn More <i class="fa-solid fa-arrow-right"></i></div
-            ></a>
+            ></a> -->
           </div>
           <div class="image-m" data-aos="fade-up">
             <img src="images/crm2.png" alt="" />
@@ -408,10 +408,10 @@
             <h5>
               We are skilled software integration specialist, adept at streamlining workflows by connecting disparate applications. With years of experience, we understand the importance of seamless data flow and efficient communication between your business tools. We can help you identify the most suitable integration methods, configure systems for optimal performance, and ensure smooth data exchange. Our focus lies on minimising disruptions and maximising the efficiency of your software ecosystem, allowing your business to operate at its full potential.
             </h5>
-            <a href="#"
+            <!-- <a href="#"
               ><div class="learn-more">
                 Learn More <i class="fa-solid fa-arrow-right"></i></div
-            ></a>
+            ></a> -->
           </div>
           <div class="image" data-aos="fade-left">
             <img src="images/crm3.png" alt="" />
@@ -421,10 +421,10 @@
             <h5>
               We are skilled software integration specialist, adept at streamlining workflows by connecting disparate applications. With years of experience, we understand the importance of seamless data flow and efficient communication between your business tools. We can help you identify the most suitable integration methods, configure systems for optimal performance, and ensure smooth data exchange. Our focus lies on minimising disruptions and maximising the efficiency of your software ecosystem, allowing your business to operate at its full potential.
             </h5>
-            <a href="#"
+            <!-- <a href="#"
               ><div class="learn-more">
                 Learn More <i class="fa-solid fa-arrow-right"></i></div
-            ></a>
+            ></a> -->
           </div>
           <div class="image-m" data-aos="fade-up">
             <img src="images/crm3.png" alt="" />
@@ -580,40 +580,40 @@
             </button>
             <div class="answer">
               <p>
-                <b>Lead Nurturing:</b> <br>
+                <b>Lead Nurturing:</b>
                 Set up automated email and SMS campaigns to nurture leads over time, ensuring they receive relevant information and follow-ups.
                 <br>
-                <b>Appointment Scheduling:</b> <br>
+                <b>Appointment Scheduling:</b>
                 Create automated workflows to manage appointment bookings, reminders, and confirmations via email or SMS.
                 <br>
-                <b>CRM Integration:</b> <br>
+                <b>CRM Integration:</b>
                 Sync contacts and leads from various sources into the Go High Level CRM, keeping your database updated and organized.
                 <br>
-                <b>Pipeline Management:</b> <br>
+                <b>Pipeline Management:</b>
                 Automate the movement of leads through your sales pipeline stages based on predefined triggers and actions.
                 <br>
-                <b>Follow-Up Sequences:</b> <br>
+                <b>Follow-Up Sequences:</b>
                 Implement automated follow-up sequences for different stages of the customer journey, ensuring timely communication and engagement.
                 <br>
-                <b>Customer Onboarding:</b> <br>
+                <b>Customer Onboarding:</b>
                 Design automated onboarding processes for new customers, including welcome emails, instructional videos, and account setup assistance.
                 <br>
-                <b>Task Assignment:</b> <br>
+                <b>Task Assignment:</b>
                 Automatically assign tasks to team members based on lead actions or status changes within the CRM.
                 <br>
-                <b>Re-engagement Campaigns:</b> <br>
+                <b>Re-engagement Campaigns:</b>
                 Set up automated campaigns to re-engage inactive leads or customers, encouraging them to take action.
                 <br>
-                <b>Survey and Feedback Collection:</b> <br>
+                <b>Survey and Feedback Collection:</b>
                 Automate the distribution and collection of surveys or feedback forms to gather customer insights and improve services.
                 <br>
-                <b>Custom Notifications:</b> <br>
+                <b>Custom Notifications:</b>
                 Create custom notifications for team members about important events, such as new lead acquisition or task completion.
                 <br>
-                <b>Review Requests:</b> <br>
+                <b>Review Requests:</b>
                 Automate the process of requesting reviews from satisfied customers, helping to build your online reputation.
                 <br>
-                <b>Billing and Invoicing:</b> <br>
+                <b>Billing and Invoicing:</b>
                 Automate billing reminders and invoicing processes to streamline financial operations and ensure timely payments.
               </p>
             </div>
@@ -777,14 +777,14 @@
         <span data-aos="fade-up" data-aos-delay="100">Grow Your Business?</span>
 
         <div class="button" data-aos="fade-up" data-aos-delay="150">
-          <!-- <a href="#"
-            ><div class="cta"><p>Book a call</p></div></a
-          > -->
+          <a href="#"
+            ><div class="cta" id="new"><p>Book a call</p></div></a
+          >
           <a href="#"
             ><div class="cta-m"><p>Book a call</p></div></a
           >
           <a href="#"
-            ><div class="cta-s"><p>Explore our offerings</p></div></a
+            ><div class="cta-s"><p>Get a Demo</p></div></a
           >
         </div>
       </div>
@@ -808,15 +808,19 @@
               </div>
               <p>From brand creation to revenue generation.</p>
               <div class="social">
-                <div><i class="fa-brands fa-instagram"></i></div>
+                <a href="https://www.instagram.com/_nusanse?igsh=cms1a2xqODdiM2Zm">
+                  <div><i class="fa-brands fa-instagram"></i></div>
+                </a>
                 <div><i class="fa-brands fa-twitter"></i></div>
-                <div><i class="fa-brands fa-linkedin-in"></i></div>
+                <a href="https://www.linkedin.com/company/nusanseio">
+                  <div><i class="fa-brands fa-linkedin-in"></i></div>
+                </a>
               </div>
             </div>
 
             <div id="m">
               <h4 id="foot-h">Why Us?</h4>
-              <p id="foot-p">Why Our Company</p>
+              <!-- <p id="foot-p">Why Our Company</p> -->
               <a href="obm.html">
                 <p id="foot-p">Our Company vs <br />Online Business Manager</p>
               </a>
@@ -840,7 +844,7 @@
       </div>
 
       <div class="copyright">
-        <p>2024 © My Company. All Rights Reserved.</p>
+        <p>2024 © Nusanse. All Rights Reserved.</p>
       </div>
     </footer>
 
