--- a/category.html
+++ b/category.html
@@ -37,12 +37,14 @@
       <div class="containerWrp">
         <div class="navbar">
           <div class="logo">
-            <img
-              src="images/logo - Nusanse.svg"
-              alt=""
-              height="32px"
-              width="155px"
-            />
+            <a href="index.html">
+              <img
+                src="images/logo - Nusanse.svg"
+                alt=""
+                height="32px"
+                width="155px"
+              />
+            </a>
           </div>
 
           <div class="hamburger-menu">
@@ -99,6 +101,9 @@
                       <p class="small-p">Software Integration</p>
                       <br />
                       <p class="small-p">Sales Funnel and Pipelines</p>
+                      <br>
+                      <a href="services.html"><p>Web Development</p></a>
+
                     </li>
                   </ul>
                 </div>
@@ -334,15 +339,19 @@
               </div>
               <p>From brand creation to revenue generation.</p>
               <div class="social">
-                <div><i class="fa-brands fa-instagram"></i></div>
+                <a href="https://www.instagram.com/_nusanse?igsh=cms1a2xqODdiM2Zm">
+                  <div><i class="fa-brands fa-instagram"></i></div>
+                </a>
                 <div><i class="fa-brands fa-twitter"></i></div>
-                <div><i class="fa-brands fa-linkedin-in"></i></div>
+                <a href="https://www.linkedin.com/company/nusanseio">
+                  <div><i class="fa-brands fa-linkedin-in"></i></div>
+                </a>
               </div>
             </div>
 
             <div id="m">
               <h4 id="foot-h">Why Us?</h4>
-              <p id="foot-p">Why Our Company</p>
+              <!-- <p id="foot-p">Why Our Company</p> -->
               <a href="obm.html">
                 <p id="foot-p">Our Company vs <br />Online Business Manager</p>
               </a>
@@ -366,7 +375,7 @@
       </div>
 
       <div class="copyright">
-        <p>2024 © My Company. All Rights Reserved.</p>
+        <p>2024 © Nusanse. All Rights Reserved.</p>
       </div>
     </footer>
   </body>
