--- a/portfolio.html
+++ b/portfolio.html
@@ -37,12 +37,14 @@
       <div class="containerWrp">
         <div class="navbar">
           <div class="logo">
-            <img
-              src="images/logo - Nusanse.svg"
-              alt=""
-              height="32px"
-              width="155px"
-            />
+            <a href="index.html">
+              <img
+                src="images/logo - Nusanse.svg"
+                alt=""
+                height="32px"
+                width="155px"
+              />
+            </a>
           </div>
 
           <div class="hamburger-menu">
@@ -50,16 +52,7 @@
           </div>
 
           <div class="nav">
-            <a
-              href="index.html"
-              style="
-                color: rgba(255, 95, 0, 1);
-                background-color: rgba(255, 239, 230, 1);
-                padding: 4px 8px;
-                border-radius: 8px;
-              "
-              >Home
-            </a>
+            <a href="index.html">Home</a>
             <div class="about-nav hasSubMenu">
               <a href="#"
                 >About us &nbsp;<i class="fa-solid fa-chevron-down"></i
@@ -104,6 +97,9 @@
                       <p class="small-p">Software Integration</p>
                       <br />
                       <p class="small-p">Sales Funnel and Pipelines</p>
+                      <br>
+                      <a href="services.html"><p>Web Development</p></a>
+
                     </li>
                   </ul>
                 </div>
@@ -129,7 +125,9 @@
         </h5>
 
         <div class="click filter">
-          <button  data-filter="all"><p>All items</p></button>
+          <button  data-filter="all">
+            <p>All items</p>
+          </button>
           <button data-filter=".category-lead">
             <p>App/ Website Design & Development</p>
           </button>
@@ -139,7 +137,9 @@
           <button data-filter=".category-funnel">
             <p>Sales Funnels and Pipelines</p>
           </button>
-          <button data-filter=".category-crm"><p>CRM</p></button>
+          <button data-filter=".category-crm">
+            <p>CRM</p>
+          </button>
         </div>
 
         <div class="p-images">
@@ -148,7 +148,7 @@
               <img src="images/port-1.png" alt="" />
               <div class="desc">
                 <div>
-                  <h5>Coinflo - Cryptocurrency</h5>
+                  <h5>Cartiziee - On-Demand Food Delivery</h5>
                   <p>Branding, Copywriting, Hosting and Support</p>
                 </div>
                 <div class="arrow">
@@ -167,7 +167,7 @@
               <img src="images/port-2.png" alt="" />
               <div class="desc">
                 <div>
-                  <h5>Coinflo - Cryptocurrency</h5>
+                  <h5>Panther - Website Design for SIEM Platform</h5>
                   <p>Branding, Copywriting, Hosting and Support</p>
                 </div>
                 <div class="arrow">
@@ -201,7 +201,7 @@
               </div>
             </a>
           </div>
-          <div class="mixItem category-lead">
+          <div class="mixItem category-lead category-funnel">
             <a href="p_inner4.html">
               <img src="images/port-4.png" alt="" />
               <div class="desc">
@@ -342,15 +342,19 @@
               </div>
               <p>From brand creation to revenue generation.</p>
               <div class="social">
-                <div><i class="fa-brands fa-instagram"></i></div>
+                <a href="https://www.instagram.com/_nusanse?igsh=cms1a2xqODdiM2Zm">
+                  <div><i class="fa-brands fa-instagram"></i></div>
+                </a>
                 <div><i class="fa-brands fa-twitter"></i></div>
-                <div><i class="fa-brands fa-linkedin-in"></i></div>
+                <a href="https://www.linkedin.com/company/nusanseio">
+                  <div><i class="fa-brands fa-linkedin-in"></i></div>
+                </a>
               </div>
             </div>
 
             <div id="m">
               <h4 id="foot-h">Why Us?</h4>
-              <p id="foot-p">Why Our Company</p>
+              <!-- <p id="foot-p">Why Our Company</p> -->
               <a href="obm.html">
                 <p id="foot-p">Our Company vs <br />Online Business Manager</p>
               </a>
@@ -374,7 +378,7 @@
       </div>
 
       <div class="copyright">
-        <p>2024 © My Company. All Rights Reserved.</p>
+        <p>2024 © Nusanse. All Rights Reserved.</p>
       </div>
     </footer>
 
